force-app/main/default/objects/FNS_TrackingDocs__c/FNS_TrackingDocs__c.object-meta.xml
<CustomObject>
    <label>Tracking Docs</label>
    <nameField>
        <label>Tracking Docs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracking Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>