force-app/main/default/objects/FNS_TrackingDocs__c/fields/FNS_Application__c.field-meta.xml
<CustomField>
    <fullName>FNS_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tracking Docs</relationshipLabel>
    <relationshipName>Tracking_Docs</relationshipName>
    <type>Lookup</type>
</CustomField>