force-app/main/default/objects/FNS_TrackingDocs__c/fields/FNS_ApplicationExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationExtId__c</fullName>
    <label>Application Ext Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>