force-app/main/default/objects/FNS_TrackingDocs__c/fields/FNS_CustomerExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_CustomerExtId__c</fullName>
    <label>Customer Ext Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>