force-app/main/default/objects/FNS_TrackingDocs__c/fields/FNS_DocumentExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_DocumentExtId__c</fullName>
    <externalId>true</externalId>
    <label>Document Ext Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>