force-app/main/default/objects/FNS_TrackingDocs__c/fields/FNS_FileName__c.field-meta.xml
<CustomField>
    <fullName>FNS_FileName__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>