force-app/main/default/objects/FNS_TrackingDocs__c/fields/FNS_IsShared__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsShared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Shared</label>
    <type>Checkbox</type>
</CustomField>