force-app/main/default/objects/FNS_TrackingDocs__c/fields/FNS_TrackingItemExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_TrackingItemExtId__c</fullName>
    <label>Tracking Item Ext Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>