force-app/main/default/objects/FNS_TrackingDocs__c/recordTypes/FNS_TrackingDocs.recordType-meta.xml
<RecordType>
    <fullName>FNS_TrackingDocs</fullName>
    <active>true</active>
    <label>FNS TrackingDocs</label>
</RecordType>